force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Auto_Add_Hidden_Page_Url__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Auto_Add_Hidden_Page_Url__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Add Hidden Page Url</label>
    <type>Checkbox</type>
</CustomField>