force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Auto_Create_MassMailer_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Auto_Create_MassMailer_Campaign_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create MassMailer Campaign Status</label>
    <type>Checkbox</type>
</CustomField>