force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Base_URL__c</fullName>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>