force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__BCC_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__BCC_Frequency__c</fullName>
    <label>BCC Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>