force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Bot_Event_Batch_Interval__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bot_Event_Batch_Interval__c</fullName>
    <label>Bot Event Batch Interval</label>
    <length>100</length>
    <type>Text</type>
</CustomField>