force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Bot_Event_Capture_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bot_Event_Capture_Seconds__c</fullName>
    <defaultValue>180</defaultValue>
    <label>Bot Event Capture Seconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>