force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Bot_Event_Last_Batch_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bot_Event_Last_Batch_Run_Time__c</fullName>
    <label>Bot Event Last Batch Run Time</label>
    <type>DateTime</type>
</CustomField>