force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Bot_Event_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bot_Event_Tracking_URL__c</fullName>
    <label>Bot Event Tracking URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>