force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Campaign_Member_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Campaign_Member_Record_Types__c</fullName>
    <label>Campaign Member Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>