force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Click_Tracking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Click_Tracking_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click Tracking Enabled</label>
    <type>Checkbox</type>
</CustomField>