force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Default_BCC_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_BCC_Email__c</fullName>
    <label>Default BCC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>