force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Default_BCC_Sender__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_BCC_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default BCC Sender</label>
    <type>Checkbox</type>
</CustomField>