force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Default_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_CC_Email__c</fullName>
    <label>Default CC Email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>