force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Default_Merge_Field_Syntax__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_Merge_Field_Syntax__c</fullName>
    <description>Default for lightning</description>
    <label>Default Merge Field Syntax</label>
    <length>120</length>
    <type>Text</type>
</CustomField>