force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Default_Merge_Object__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_Merge_Object__c</fullName>
    <label>Default Merge Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>