force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Default_Selected_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_Selected_Campaign_Status__c</fullName>
    <label>Default Selected Campaign Status</label>
    <type>TextArea</type>
</CustomField>