force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Disable_Custom_Sender__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Disable_Custom_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Custom Sender</label>
    <type>Checkbox</type>
</CustomField>