force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Disable_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Disable_Logged_In_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Logged In User</label>
    <type>Checkbox</type>
</CustomField>