force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Disable_Non_Transactional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Disable_Non_Transactional_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Non-Transactional Emails</label>
    <type>Checkbox</type>
</CustomField>