force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Disable_On_behalf__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Disable_On_behalf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable On behalf</label>
    <type>Checkbox</type>
</CustomField>