force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Disable_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Disable_Record_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Record Owner</label>
    <type>Checkbox</type>
</CustomField>