force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Email_Batch_Count__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Batch_Count__c</fullName>
    <defaultValue>10</defaultValue>
    <description>This field manages the batch size of sending an email</description>
    <label>Email Batch Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>