force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Email_Verification_API_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Verification_API_Record_Limit__c</fullName>
    <label>Email Verification API Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>