force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Email_Verification_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Verification_Batch_Size__c</fullName>
    <label>Email Verification Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>