force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Enable_Auto_Test_Email_Deliverability__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Enable_Auto_Test_Email_Deliverability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Auto Test Email Deliverability</label>
    <type>Checkbox</type>
</CustomField>