force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Enable_Bot_Event_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Enable_Bot_Event_Suppression__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Bot Event Suppression</label>
    <type>Checkbox</type>
</CustomField>