force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Enable_Default_BCC_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Enable_Default_BCC_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Default BCC Email</label>
    <type>Checkbox</type>
</CustomField>