force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__FromAddress__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__FromAddress__c</fullName>
    <label>FromAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>