force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__FromName__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__FromName__c</fullName>
    <label>FromName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>