force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Google_Analytics_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Google_Analytics_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Analytics Enabled</label>
    <type>Checkbox</type>
</CustomField>