force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__ReplyTo__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ReplyTo__c</fullName>
    <label>ReplyTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>