force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Subscription_Tracking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Subscription_Tracking_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscription Tracking Enabled</label>
    <type>Checkbox</type>
</CustomField>