force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Suppress_Duplicate_Emails__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppress_Duplicate_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Duplicate Emails</label>
    <type>Checkbox</type>
</CustomField>