force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Suppressed_Email_Event_Loggings__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppressed_Email_Event_Loggings__c</fullName>
    <label>Suppressed Email Event Loggings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>