force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Sync_Lead_Contact_Email_Opt_Out_Fields__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Sync_Lead_Contact_Email_Opt_Out_Fields__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Lead/Contact Email Opt-Out Fields</label>
    <type>Checkbox</type>
</CustomField>