force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Template_System_Information_Collapsed__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Template_System_Information_Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template System Information Collapsed</label>
    <type>Checkbox</type>
</CustomField>