force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Turn_off_Campaign_Member_Status_update__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Turn_off_Campaign_Member_Status_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn off Campaign Member Status Update</label>
    <type>Checkbox</type>
</CustomField>