force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Turn_off_Salesforce_Activity_Logging__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Turn_off_Salesforce_Activity_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn off Salesforce Activity Logging</label>
    <type>Checkbox</type>
</CustomField>