force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__UnsubscribeGroupPreferencesView__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__UnsubscribeGroupPreferencesView__c</fullName>
    <defaultValue>&quot;List&quot;</defaultValue>
    <label>UnsubscribeGroupPreferencesView</label>
    <length>255</length>
    <type>Text</type>
</CustomField>