force-app/main/default/objects/Cloudrop__Tracking_Settings__c/fields/Cloudrop__Use_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Use_Email_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Email Message</label>
    <type>Checkbox</type>
</CustomField>